Allow mvn site to build

--- a/cup/cup_runtime/pom.xml
+++ b/cup/cup_runtime/pom.xml
@@ -4,12 +4,11 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>cup_runtime</artifactId>
-  <version>${cup.version}</version>
   <packaging>jar</packaging>
   <parent>
     <groupId>de.jflex</groupId>
-    <artifactId>jflex-parent</artifactId>
-    <version>1.7.0-SNAPSHOT</version>
+    <artifactId>cup-parent</artifactId>
+    <version>11b</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <name>CUP runtime</name>
@@ -18,28 +17,4 @@
     A copy of the Java CUP runtime.
     CUP is a LALR parser generator for Java
   </description>
-  <profiles>
-    <profile>
-      <id>disable-format-java</id>
-      <activation>
-        <jdk>[1.8,)</jdk>
-        <property>
-          <name>!env.CI</name>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>com.coveo</groupId>
-            <artifactId>fmt-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <phase>none</phase>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 </project>
