the maven-jflex plugin doesn't require 3.5.2 This is only required for our own compilation.
Any Maven 3 should work

--- a/jflex-maven-plugin/pom.xml
+++ b/jflex-maven-plugin/pom.xml
@@ -17,7 +17,7 @@
     a Lexer specification, using JFlex.
   </description>
   <prerequisites>
-    <maven>${maven.version}</maven>
+    <maven>3.0</maven>
   </prerequisites>
   <inceptionYear>2007</inceptionYear>
   <developers>
