Cleanup of the POM (#230)
* Fix all pom warnings
* Bump dep version numbers
  - except ant whose newest version uses Java 8
* Reformat and reorder elements in alphabetical order
* Remove apache.maven.plugins groupId on plugins
* Require Maven 3.5.2 due to bug in 3.5.0 with maven-shade-plugin
* In jflex-maven-plugin, use jflex-parent
  - Remove the old sonatype parent and use jflex-parent in plugin as well
  - This allows to remove a lot of duplicate decalrations
  - As a result, reformat Java code of jflex-plugin (because this change applies google-java-format to the plugin source code too).
* Remove unnecessary build steps

--- a/cup/cup_runtime/pom.xml
+++ b/cup/cup_runtime/pom.xml
@@ -12,9 +12,9 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
   <name>CUP runtime</name>
-  <url>http://www2.cs.tum.edu/projects/cup/</url>
   <inceptionYear>1998</inceptionYear>
   <description>
     A copy of the Java CUP runtime.
+    CUP is a LALR parser generator for Java
   </description>
 </project>
