--- a/.gitignore
+++ b/.gitignore
@@ -8,105 +8,7 @@
 
 **/target
 
-# /
-/maven-jflex-plugin
-
-# /jflex/
-/jflex/build
-
-# /jflex/examples
-/jflex/examples/*/output.txt
-/jflex/examples/interpreter/Yylex.java
-/jflex/examples/java/Scanner.java
-/jflex/examples/java/UnicodeEscapes.java
-/jflex/examples/java/lexer-output.txt
-/jflex/examples/cup/Lexer.java
-/jflex/examples/byaccj/YYLex.java
-/jflex/examples/zero-reader/ZeroLexer.java
-/jflex/examples/*/parser.java
-/jflex/examples/*/sym.java
-
-# /jflex/lib/
-/jflex/lib/jflex-*.jar
-/jflex/lib/junit-*.jar
-
-# /jflex-maven-plugin/
-/jflex-maven-plugin/bin
-
-# /testsuite
-/testsuite/testcases/src/test/cases/apiprivate/Private.java
-/testsuite/testcases/src/test/cases/arr-return/Arr.java
-/testsuite/testcases/src/test/cases/bol/Bol.java
-/testsuite/testcases/src/test/cases/buffer/Buffer.java
-/testsuite/testcases/src/test/cases/caseless-jflex/Caseless.java
-/testsuite/testcases/src/test/cases/caseless-jlex/Caseless.java
-/testsuite/testcases/src/test/cases/ccl-16/Ccl.java
-/testsuite/testcases/src/test/cases/ccl-bug/Yylex.java
-/testsuite/testcases/src/test/cases/ccl-esc/Yylex.java
-/testsuite/testcases/src/test/cases/ccl-pre/Ccl2.java
-/testsuite/testcases/src/test/cases/ccl-pre/Ccl3.java
-/testsuite/testcases/src/test/cases/charclass/Charclass.java
-/testsuite/testcases/src/test/cases/count/Count.java
-/testsuite/testcases/src/test/cases/ctorarg/Ctorarg.java
-/testsuite/testcases/src/test/cases/cupsym/Cupsym.java
-/testsuite/testcases/src/test/cases/dot-newline/Dotnewline.java
-/testsuite/testcases/src/test/cases/empty-match/*.java
-/testsuite/testcases/src/test/cases/eof-min/Eofmin.java
-/testsuite/testcases/src/test/cases/eofclose/Eofclose.java
-/testsuite/testcases/src/test/cases/eofclose2/Eofclose2.java
-/testsuite/testcases/src/test/cases/eol-comment/Eolcomment.java
-/testsuite/testcases/src/test/cases/eol-look/Eol.java
-/testsuite/testcases/src/test/cases/fixed-look/Fixedlook.java
-/testsuite/testcases/src/test/cases/generics/Generics*.java
-/testsuite/testcases/src/test/cases/genlook/Genlook.java
-/testsuite/testcases/src/test/cases/genlook2/Genlook2.java
-/testsuite/testcases/src/test/cases/include/Include.java
-/testsuite/testcases/src/test/cases/include-in-rules/IncludeInRules.java
-/testsuite/testcases/src/test/cases/include2/Include2.java
-/testsuite/testcases/src/test/cases/initthrow-eol/Initthrow.java
-/testsuite/testcases/src/test/cases/java/Java.java
-/testsuite/testcases/src/test/cases/line-cont/Yylex.java
-/testsuite/testcases/src/test/cases/look/Look.java
-/testsuite/testcases/src/test/cases/look-macro/Lookmacro.java
-/testsuite/testcases/src/test/cases/macro-exp/Macro.java
-/testsuite/testcases/src/test/cases/manual-ex/Lexer.java
-/testsuite/testcases/src/test/cases/nevermatch/Never.java
-/testsuite/testcases/src/test/cases/simple/Simple.java
-/testsuite/testcases/src/test/cases/six-digit-unicode-escape/SixDigitUnicodeEscape*.java
-/testsuite/testcases/src/test/cases/testloader/Testloader.java
-/testsuite/testcases/src/test/cases/unicode-age/UnicodeAge_*.java
-/testsuite/testcases/src/test/cases/unicode-blocks/Unicode*.java
-/testsuite/testcases/src/test/cases/unicode-caseless/UnicodeCaseless*.java
-/testsuite/testcases/src/test/cases/unicode-codepoint-escapes/UnicodeCodePointEscapes*.java
-/testsuite/testcases/src/test/cases/unicode-compatibility-properties/UnicodeCompatibilityProperties*.java
-/testsuite/testcases/src/test/cases/unicode-derived-core-properties/UnicodeDerivedCoreProperties*.java
-/testsuite/testcases/src/test/cases/unicode-digit/UnicodeDecimalDigit*.java
-/testsuite/testcases/src/test/cases/unicode-general-category/UnicodeGeneralCategory*.java
-/testsuite/testcases/src/test/cases/unicode-general-category/UnicodeNotGeneralCategory*.java
-/testsuite/testcases/src/test/cases/unicode-grapheme-break/UnicodeGrapheme*Break*.java
-/testsuite/testcases/src/test/cases/unicode-letter/UnicodeLetter*.java
-/testsuite/testcases/src/test/cases/unicode-line-break/UnicodeLineBreak*.java
-/testsuite/testcases/src/test/cases/unicode-lowercase/UnicodeLowercase*.java
-/testsuite/testcases/src/test/cases/unicode-misc-properties/UnicodeMisc*.java
-/testsuite/testcases/src/test/cases/unicode-proplist/UnicodePropList*.java
-/testsuite/testcases/src/test/cases/unicode-scripts/Unicode*.java
-/testsuite/testcases/src/test/cases/unicode-sentence-break/UnicodeSentenceBreak*.java
-/testsuite/testcases/src/test/cases/unicode-space/UnicodeWhiteSpace*.java
-/testsuite/testcases/src/test/cases/unicode-uppercase/UnicodeUppercase*.java
-/testsuite/testcases/src/test/cases/unicode-word/UnicodeWord*.java
-/testsuite/testcases/src/test/cases/unicode-word-break/UnicodeWordBreak*.java
-/testsuite/testcases/src/test/cases/cup2private/Cup2private.java
-/testsuite/testcases/src/test/cases/no-unused/NoUnused.java
-/testsuite/testcases/src/test/cases/unused/Unused.java
-
-# /tex/
-/tex/manual.aux
-/tex/manual.log
-/tex/manual.out
-/tex/manual.toc
-/tex/manual.html
-/tex/manual.pdf
-/tex/.project
+dependency-reduced-pom.xml
 
 # Eclipse project
 .project
