--- a/cup-maven-plugin/pom.xml
+++ b/cup-maven-plugin/pom.xml
@@ -7,9 +7,9 @@
     <version>1.7.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
+  <version>1.0</version>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>cup-maven-plugin</artifactId>
-  <version>0.1</version>
   <packaging>maven-plugin</packaging>
   <name>cup-maven-plugin Maven Mojo</name>
 
@@ -26,21 +26,26 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
     </dependency>
+
     <dependency>
       <groupId>de.jflex</groupId>
       <artifactId>cup</artifactId>
     </dependency>
     <dependency>
+      <groupId>de.jflex</groupId>
+      <artifactId>cup_runtime</artifactId>
+      <version>11b</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.apache.maven.plugin-tools</groupId>
       <artifactId>maven-plugin-annotations</artifactId>
       <scope>provided</scope>
     </dependency>
-
     <dependency>
       <groupId>com.google.truth</groupId>
       <artifactId>truth</artifactId>
