--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,11 @@
         <version>${cup.version}</version>
       </dependency>
       <dependency>
+        <groupId>de.jflex</groupId>
+        <artifactId>cup_runtime</artifactId>
+        <version>${cup.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.apache.ant</groupId>
         <artifactId>ant</artifactId>
         <version>1.7.0</version>
@@ -169,6 +174,11 @@
   <build>
     <pluginManagement>
       <plugins>
+        <plugin>
+          <groupId>de.jflex</groupId>
+          <artifactId>cup-maven-plugin</artifactId>
+          <version>1.0</version>
+        </plugin>
         <plugin>
           <artifactId>maven-antrun-plugin</artifactId>
           <version>1.7</version>
