Complete integration by asserting that the generated files exist.

--- a/cup/sample-project/pom.xml
+++ b/cup/sample-project/pom.xml
@@ -18,6 +18,10 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <parserName>MyParser</parserName>
+          <symbolsName>MySymbols</symbolsName>
+        </configuration>
       </plugin>
     </plugins>
   </build>
