--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ jdk:
   - openjdk7
   - openjdk8
 
-installation: true
+install: true
 
 jobs:
   include:
     # Run the tests
     - stage: test
-      script: ./scripts/test-unit.sh
-      script: ./scripts/test-regression.sh
-      script: ./scripts/ant-build.sh
+    - script: ./scripts/test-unit.sh
+    - script: ./scripts/test-regression.sh
+    - script: ./scripts/ant-build.sh
