Replace the cup ant task by a Maven plugin. (#248)
* Add a new **de.flex:cup-maven-plugin** with goal **generate**
 - For now, the plugin only suppots options **parser, symbols, symbolInterface**
 - Add a simple project used for integration testing
* Use **de.flex:cup-maven-plugin:generate** in **jflex** project instead of ant task

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
 
   <modules>
     <module>cup</module>
+    <module>cup-maven-plugin</module>
     <module>jflex-unicode-maven-plugin</module>
     <module>jflex</module>
     <module>jflex-maven-plugin</module>
@@ -102,9 +103,29 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>20.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.truth</groupId>
+        <artifactId>truth</artifactId>
+        <version>0.36</version>
+      </dependency>
+      <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
         <version>2.6</version>
+      </dependency>
+      <dependency>
+        <groupId>de.jflex</groupId>
+        <artifactId>cup</artifactId>
+        <version>${cup.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>de.jflex</groupId>
+        <artifactId>cup_runtime</artifactId>
+        <version>${cup.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.ant</groupId>
@@ -141,12 +162,23 @@
         <artifactId>junit</artifactId>
         <version>4.12</version>
       </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>2.11.0</version>
+        <scope>test</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
   <build>
     <pluginManagement>
       <plugins>
+        <plugin>
+          <groupId>de.jflex</groupId>
+          <artifactId>cup-maven-plugin</artifactId>
+          <version>1.0</version>
+        </plugin>
         <plugin>
           <artifactId>maven-antrun-plugin</artifactId>
           <version>1.7</version>
