--- a/jflex/pom.xml
+++ b/jflex/pom.xml
@@ -55,6 +55,10 @@
   </developers>
   <dependencies>
     <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+    </dependency>
+    <dependency>
       <groupId>de.jflex</groupId>
       <artifactId>cup_runtime</artifactId>
       <version>${cup.version}</version>
@@ -62,12 +66,16 @@
     <dependency>
       <groupId>org.apache.ant</groupId>
       <artifactId>ant</artifactId>
-      <scope>compile</scope>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
     </dependency>
   </dependencies>
   <build>
@@ -158,11 +166,7 @@
               <goal>shade</goal>
             </goals>
             <configuration>
-              <artifactSet>
-                <includes>
-                  <include>de.jflex:cup_runtime</include>
-                </includes>
-              </artifactSet>
+              <finalName>${artifactId}-full-${version}</finalName>
             </configuration>
           </execution>
         </executions>
