Change the name of the shaded arteface.
By default the maven shade plugin:

1. takes jflex.jar
2. shades it
3. builds a shaded jflex.jar and renames the original original-jfex.jar

I think this is not good for the following reasons:

- The maven-shade-plugin seems to be confused in incremental builds (and warns that java_cup is already part of the original jflex)
- Goes against the usual naming convention. In Maven world, a jar is a lib, not an uberjar.

Rename the uber jar flex-full.jar

--- a/jflex/pom.xml
+++ b/jflex/pom.xml
@@ -158,6 +158,7 @@
               <goal>shade</goal>
             </goals>
             <configuration>
+              <finalName>${artifactId}-full-${version}</finalName>
               <artifactSet>
                 <includes>
                   <include>de.jflex:cup_runtime</include>
