jflex-testsuite-maven-plugin: Use jflex uber jar rather than hardcoded m2 repo path
Now that cup is externalized (#241), we need to use the uber jar. I changed it's name to jflex-full and it's not deployed.

Using ~/.m2/repository was a anyway a mistake, because the reposiory path can be changed in settings.xml

Instead:
- the jflex testsuite plugin requires the uberjar, whose path is provided by configuration
- the default configuration is sensible default value

Also modernize Mojo to use annotations.

--- a/testsuite/jflex-testsuite-maven-plugin/pom.xml
+++ b/testsuite/jflex-testsuite-maven-plugin/pom.xml
@@ -99,6 +99,10 @@
   </profiles>
   <dependencies>
     <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.ant</groupId>
       <artifactId>ant</artifactId>
     </dependency>
@@ -123,6 +127,14 @@
       <version>1.5.0</version>
       <scope>system</scope>
       <systemPath>${toolsjar}</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.plugin-tools</groupId>
+      <artifactId>maven-plugin-annotations</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.plugin-tools</groupId>
+      <artifactId>maven-plugin-annotations</artifactId>
     </dependency>
   </dependencies>
 </project>
