--- a/cup-maven-plugin/pom.xml
+++ b/cup-maven-plugin/pom.xml
@@ -11,7 +11,8 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>cup-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <name>cup-maven-plugin Maven Mojo</name>
+  <name>CUP Maven plugin</name>
+  <description>A plugin to generate Java parsers with CUP.</description>
 
   <developers>
     <developer>
