--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ jdk:
   - openjdk7
   - openjdk8
 
-install: ./mvnw -Pfastbuild install
+# mvn installation is not needed for ant, so we do it ourselves
+install: true
 
 script: ./scripts/run-tests.sh
+
+env:
+  - TEST_SUITE=ant
+  - TEST_SUITE=unit
+  - TEST_SUITE=regression
