--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: java
 
 jdk:
-  - openjdk7
-  - openjdk8
+- openjdk7
+- openjdk8
 
 install: ./mvnw -Pfastbuild install
 
 script: ./scripts/run-tests.sh
+
+env:
+  global:
+    secure: aJESGpKw6em1tXsr6EJgXmViV5+obxbqkW3ir1FQ4gjK3hlKzvOCCS/Yws1zgmcO1O65kIKTLPNDScDqTxSwxujwu487M4m+3bqEj7A5MQf6lVw+25jgfMYh31tQXGingnz/i6n23cOPIlHMD5mufCgzPUhIrMY70ATEBdgG8F4=
