Make Travis deploy Maven site on github pages (#265)
* Re-design the site
  - Fresh skin
  - project info (about, summary, plugins, deps)
  - project reports (javadoc, findbugs)
  - links to jflex.de (home, docs, etc.) and github (source, releases)
* Only compile the jflex-maven-plugin site for now
* Let Travis deploy the jflex-maven-plugin site to github pages
  - Use github's site-maven-plugin
  - Add encrypted regisd OAuth token to Travis. The token needs:
    - repo access
    - user:email
  - Deploy site on jflex-web repo in deploy phase (only for master, only if success)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: java
 
 jdk:
-  - openjdk7
-  - openjdk8
+- openjdk7
+- openjdk8
 
 # mvn installation is not needed for ant, so we do it ourselves
 install: true
@@ -10,6 +10,16 @@ install: true
 script: ./scripts/run-tests.sh
 
 env:
+  matrix:
   - TEST_SUITE=ant
   - TEST_SUITE=unit
   - TEST_SUITE=regression
+  global:
+    secure: aJESGpKw6em1tXsr6EJgXmViV5+obxbqkW3ir1FQ4gjK3hlKzvOCCS/Yws1zgmcO1O65kIKTLPNDScDqTxSwxujwu487M4m+3bqEj7A5MQf6lVw+25jgfMYh31tQXGingnz/i6n23cOPIlHMD5mufCgzPUhIrMY70ATEBdgG8F4=
+
+deploy:
+ provider: script
+ script: ./mvnw site-deploy
+ on:
+   branch: master
+
