Revert "Make Travis deploy Maven site on github pages (#265)"
This reverts commit 4fa7aa3a9531b44b9b8e69398f8a968e7aa013dc.

The deploy steps fails

--- a/cup/pom.xml
+++ b/cup/pom.xml
@@ -59,13 +59,6 @@
           <skip>true</skip>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-site-plugin</artifactId>
-        <configuration>
-          <skipDeploy>true</skipDeploy>
-        </configuration>
-      </plugin>
     </plugins>
     <pluginManagement>
       <plugins>
@@ -88,18 +81,16 @@
             <encoding>UTF-8</encoding>
           </configuration>
         </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>3.6</version>
-        </plugin>
       </plugins>
     </pluginManagement>
   </build>
 
-  <properties>
-    <maven.site.skip>true</maven.site.skip>
-  </properties>
+  <distributionManagement>
+    <site>
+      <id>local</id>
+      <url>mvn</url>
+    </site>
+  </distributionManagement>
 
   <profiles>
     <profile>
@@ -107,17 +98,36 @@
       <activation>
         <jdk>[1.8,)</jdk>
       </activation>
-      <properties>
-        <additionalparam>-Xdoclint:none</additionalparam>
-      </properties>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-javadoc-plugin</artifactId>
+              <configuration>
+                <additionalparam>-Xdoclint:none</additionalparam>
+              </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-site-plugin</artifactId>
+              <version>3.6</version>
+              <configuration>
+                <reportPlugins>
+                  <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <configuration>
+                      <additionalparam>-Xdoclint:none</additionalparam>
+                    </configuration>
+                  </plugin>
+                </reportPlugins>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
     </profile>
   </profiles>
 
-  <distributionManagement>
-    <site>
-      <id>github.pages</id>
-      <name>Github pages</name>
-      <url>maven-site/${project.version</url>
-    </site>
-  </distributionManagement>
 </project>
