--- a/jflex-maven-plugin/pom.xml
+++ b/jflex-maven-plugin/pom.xml
@@ -43,9 +43,6 @@
       </roles>
     </contributor>
   </contributors>
-  <scm>
-    <url>https://github.com/jflex-de/jflex/tree/master/jflex-maven-plugin</url>
-  </scm>
   <build>
     <plugins>
       <plugin>
@@ -68,40 +65,8 @@
         </executions>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-plugin-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-site-plugin</artifactId>
-        <configuration>
-          <skip>false</skip>
-        </configuration>
-      </plugin>
-      <plugin>
-        <!-- Deploy on github -->
-        <groupId>com.github.github</groupId>
-        <artifactId>site-maven-plugin</artifactId>
-        <version>0.12</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>site</goal>
-            </goals>
-            <phase>site-deploy</phase>
-            <configuration>
-              <!-- The server defined in your settings.xml
-              https://github.com/github/maven-plugins#authentication-example -->
-              <server>github</server>
-              <!-- The commit message -->
-              <message>Github pages for JFlex ${project.version}</message>
-              <!-- The location where the site is uploaded -->
-              <path>${project.distributionManagement.site.url}</path>
-              <!-- Use merge or override the content -->
-              <merge>true</merge>
-              <repositoryOwner>jflex-de</repositoryOwner>
-              <repositoryName>jflex-web</repositoryName>
-            </configuration>
-          </execution>
-        </executions>
       </plugin>
     </plugins>
   </build>
