--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <name>JFlex parent and aggregator POM</name>
   <version>1.7.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <url>https://jflex-de.github.io/jflex/</url>
+  <url>http://jflex.de/</url>
   <description>JFlex parent and aggregator POM</description>
   <licenses>
     <license>
@@ -81,7 +81,6 @@
 
   <properties>
     <cup.version>11b</cup.version>
-    <github.global.server>github</github.global.server>
     <jflex.jdk.version>1.7</jflex.jdk.version>
     <!-- 3.0.x fails to compile flex-maven-plugin https://issues.apache.org/jira/browse/MNG-5346 -->
     <maven.version>3.5.2</maven.version>
@@ -98,7 +97,7 @@
   <scm>
     <connection>scm:git:git@github.com:jflex-de/jflex.git</connection>
     <developerConnection>scm:git:git@github.com:jflex-de/jflex.git</developerConnection>
-    <url>https://github.com/jflex-de/jflex</url>
+    <url>scm:git:git@github.com:jflex-de/jflex.git</url>
   </scm>
 
   <dependencyManagement>
@@ -297,12 +296,22 @@
           </execution>
         </executions>
         <configuration>
-          <topSiteURL>http://jflex-de.github.io/</topSiteURL>
+          <topSiteURL>http://jflex.de/</topSiteURL>
           <stagingDirectory>/tmp/maven-staging-site</stagingDirectory>
-          <!-- We use github instead -->
-          <skip>true</skip>
-          <skipDeploy>true</skipDeploy>
         </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <version>2.7</version>
+        <executions>
+          <execution>
+            <id>site</id>
+            <goals>
+              <goal>index</goal>
+              <goal>summary</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
@@ -316,9 +325,6 @@
             <reports>
               <report>index</report>
               <report>summary</report>
-              <report>plugins</report>
-              <report>dependencies</report>
-              <report>plugins</report>
             </reports>
           </reportSet>
         </reportSets>
@@ -345,9 +351,8 @@
 
   <distributionManagement>
     <site>
-      <id>github.pages</id>
-      <name>Github pages</name>
-      <url>maven-site/${project.version}</url>
+      <id>local</id>
+      <url>mvn</url>
     </site>
   </distributionManagement>
 
@@ -360,7 +365,7 @@
         </property>
       </activation>
       <properties>
-        <additionalparam>-Xdoclint:none</additionalparam>
+        <javadoc.opts>-Xdoclint:none</javadoc.opts>
       </properties>
     </profile>
     <profile>
