--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,11 @@ env:
     secure: aJESGpKw6em1tXsr6EJgXmViV5+obxbqkW3ir1FQ4gjK3hlKzvOCCS/Yws1zgmcO1O65kIKTLPNDScDqTxSwxujwu487M4m+3bqEj7A5MQf6lVw+25jgfMYh31tQXGingnz/i6n23cOPIlHMD5mufCgzPUhIrMY70ATEBdgG8F4=
 
 deploy:
- provider: script
- script: ./scripts/deploy.sh
- on:
-   branch: site
+  provider: script
+  script: ./scripts/deploy.sh
+  # clean causes:
+  # Could not restore untracked files from stash entry
+  #  Script failed with status 1
+  skip_cleanup: true
+  on:
+    branch: site
