--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ jdk:
 - openjdk7
 - openjdk8
 
-# mvn installation is not needed for ant, so we do it ourselves
 install: true
 
 script: ./scripts/run-tests.sh
@@ -14,8 +13,6 @@ env:
   - TEST_SUITE=ant
   - TEST_SUITE=unit
   - TEST_SUITE=regression
-  global:
-    secure: "aJESGpKw6em1tXsr6EJgXmViV5+obxbqkW3ir1FQ4gjK3hlKzvOCCS/Yws1zgmcO1O65kIKTLPNDScDqTxSwxujwu487M4m+3bqEj7A5MQf6lVw+25jgfMYh31tQXGingnz/i6n23cOPIlHMD5mufCgzPUhIrMY70ATEBdgG8F4="
 
 deploy:
   provider: script
@@ -23,3 +20,5 @@ deploy:
   skip_cleanup: true
   on:
     branch: site
+  api_key:
+    secure: "ScAdHddVY+WYRBSVsTgvb2FHRhnzWt34oO0XZQvvrS0cMZvC0tpVQtHd00YEIJm4DG+H4yAhs99aR6BQE4+fiH76LLPryKCdhv/ktnyjV+TNumVJO9I0yhT9ehtM+vAQVjlCI5E72CLNkD3r4WDt5Gha+txt0/wO6KYllP5zizU="
