--- a/pom.xml
+++ b/pom.xml
@@ -298,7 +298,7 @@
         </executions>
         <configuration>
           <topSiteURL>http://jflex-de.github.io/</topSiteURL>
-          <stagingDirectory>/tmp/maven-staging-site</stagingDirectory>
+          <stagingDirectory>${project.parent.basedir}/target/maven-staging-site</stagingDirectory>
           <!-- We use github instead -->
           <skip>true</skip>
           <skipDeploy>true</skipDeploy>
@@ -351,7 +351,7 @@
     <site>
       <id>github.pages</id>
       <name>Github pages</name>
-      <url>maven-site/${project.version}</url>
+      <url>maven-site/</url>
     </site>
   </distributionManagement>
 
