--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ deploy:
   github_token: $GITHUB_TOKEN
   on:
     branch: site
+    condition: $TEST_SUITE = unit
   local_dir: target/maven-staging-site/
   repo: jflex-de/jflex-web
   name: Travis site-deploy bot
